--- a/test.html
+++ b/test.html
@@ -5,82 +5,117 @@
     <title>test</title>
 </head>
 <body>
-<h2>统一建模语言理论测试</h2>
-<a>考试科目</a>
-<br/>
-<a>时间：100分钟</a>
-<br/>
-<a>得分：</a>
-<br/>
-<a>班级（必填）：</a><input/>
-<br/>
-<a>学号（必填）：</a><input/>
-<br/>
-<a>姓名（必填）：</a><input/>
-<br/><br/>
+<div>
+    <h2>统一建模语言理论测试</h2>
+    考试科目<br/>
+    时间：100分钟<br/>
+    得分：<br/>
+    班级（必填）：<input type="text"/><br/>
+    学号（必填）：<input type="text"/><br/>
+    姓名（必填）：<input type="text"/><br/>
+</div>
 <article>
     <section>
         <header>
-            <a>一、填空题（每空5分，共20分）</a>
-        </header>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp;1.UML的中文全称是：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;<input/><br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;2.对象最突出的特征是：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;<input/><input/><input/>
-        </p>
-    </section>
-    <section>
-        <header>
-            <a>二、选择题（每空10分，共20分）</a>
+            一、填空题（每空5分，共20分）
         </header>
         <p>
-            &nbsp; &nbsp; &nbsp; &nbsp;1.UML与软件工程的关系是：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(A)UML就是软件工程<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(B)UML参与到软件工程中软件开发过程的几个阶段<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(C)UML与软件工程无关<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(D)UML是软件工程的一部分<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;2.Java语言支持：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(A)单继承<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(B)多继承<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(C)单继承和多继承都支持<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="radio">(D)单继承和多继承都不支持<br/>
-        </p>
+        <ol>
+        <li>
+            <div>
+               UML的中文全称是：<br/>
+                <input type="text"/>
+            </div>
+        </li>
+        <li>
+            <div>
+                对象最突出的特征是：<br/>
+                <input type="text"/><input type="text"/><input type="text"/>
+            </div>
+        </li>
+        </ol>
     </section>
     <section>
         <header>
-            <a>三、多项选择题（每空10分，共20分）</a>
+            二、选择题（每空10分，共20分）
         </header>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp;1.用例的粒度分为以下哪三种：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(A)概述级<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(B)需求级<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(C)用户目标级<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(D)子功能级<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;2.类图由以下哪三部分组成：<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(A)名称（Name）<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(B)属性（Attribute）<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(C)操作（Operation）<br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<input type="checkbox">(D)方法（Function）<br/>
-        </p>
+        <p>
+        <ol>
+            <li>
+                <div>
+                    UML与软件工程的关系是：<br/>
+                    <input type="radio">(A)UML就是软件工程<br/>
+                    <input type="radio">(B)UML参与到软件工程中软件开发过程的几个阶段<br/>
+                    <input type="radio">(C)UML与软件工程无关<br/>
+                    <input type="radio">(D)UML是软件工程的一部分<br/>
+                </div>
+            </li>
+            <li>
+                <div>
+                    Java语言支持：<br/>
+                    <input type="radio">(A)单继承<br/>
+                    <input type="radio">(B)多继承<br/>
+                    <input type="radio">(C)单继承和多继承都支持<br/>
+                    <input type="radio">(D)单继承和多继承都不支持<br/>
+                </div>
+            </li>
+        </ol>
+    </section>
+    <section>
+        <header>
+            三、多项选择题（每空10分，共20分）
+        </header>
+        <p>
+        <ol>
+            <li>
+                <div>
+                    用例的粒度分为以下哪三种：<br/>
+                    <input type="checkbox">(A)概述级<br/>
+                    <input type="checkbox">(B)需求<br/>
+                    <input type="checkbox">(C)用户目标级<br/>
+                    <input type="checkbox">(D)子功能级<br/>
+                </div>
+            </li>
+            <li>
+                <div>
+                    类图由以下哪三部分组成：<br/>
+                    <input type="checkbox">(A)名称（Name）<br/>
+                    <input type="checkbox">(B)属性（Attribute）<br/>
+                    <input type="checkbox">(C)操作（Operation）<br/>
+                    <input type="checkbox">(D)方法（Function）<br/>
+                </div>
+            </li>
+        </ol>
     </section>
     <section>
         <header>
             <a>四、判断题（每空10分，共20分）</a>
         </header>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp;1.用例图只是用于和客户交流和沟通的，用于确定需求。
-            <input type="radio"/><input type="radio"/><br/>
-            &nbsp; &nbsp; &nbsp; &nbsp;2.在状态图中，终止状态在一个状态图中允许有任意多个。
-            <input type="radio"/><input type="radio"/><br/>
-            <br/>
-        </p>
-    </section><section>
-    <header>
-        <a>五、简答题（每空20分，共20分）</a>
-    </header>
-    <p>&nbsp; &nbsp; &nbsp; &nbsp;1.简述什么是模型以及模型的表现形式？
-        <textarea rows="3" cols="20">
-   </textarea>
-    </p>
-</section>
+        <p>
+        <ol>
+            <li>
+                <div>用例图只是用于和客户交流和沟通的，用于确定需求。
+                    <input type="radio"/><input type="radio"/>
+                </div>
+            </li>
+            <li>
+                <div>在状态图中，终止状态在一个状态图中允许有任意多个。
+                    <input type="radio"/><input type="radio"/>
+                </div>
+            </li>
+        </ol>
+    </section>
+    <section>
+        <header>
+            <a>五、简答题（每空20分，共20分）</a>
+        </header>
+        <p>
+        <ol>
+            <li>简述什么是模型以及模型的表现形式？
+                <textarea rows="3" cols="20"></textarea>
+            </li>
+        </ol>
+    </section>
     <section>
         <button>计算分数</button>
     </section>
