--- a/test.html
+++ b/test.html
@@ -7,91 +7,81 @@
 <body>
 <div>
     <h2>统一建模语言理论测试</h2>
-    考试科目<br/>
-    时间：100分钟<br/>
-    得分：<br/>
-    班级（必填）：<input type="text"/><br/>
-    学号（必填）：<input type="text"/><br/>
-    姓名（必填）：<input type="text"/><br/>
+</div>
+<div>
+    <div>考试科目</div>
+    <div>时间：100分钟</div>
+    <div>得分：</div>
+    <div>班级（必填）：<input type="text" required="required"/></div>
+    <div>学号（必填）：<input type="text" required="required"/></div>
+    <div>姓名（必填）：<input type="text" required="required"/></div>
 </div>
 <article>
     <section>
-        <header>
-            一、填空题（每空5分，共20分）
-        </header>
-        <p>
-        <ol>
-        <li>
-            <div>
-               UML的中文全称是：<br/>
-                <input type="text"/>
-            </div>
-        </li>
-        <li>
-            <div>
-                对象最突出的特征是：<br/>
-                <input type="text"/><input type="text"/><input type="text"/>
-            </div>
-        </li>
-        </ol>
-    </section>
-    <section>
-        <header>
-            二、选择题（每空10分，共20分）
-        </header>
-        <p>
+        <header>一、填空题（每空5分，共20分</header>
         <ol>
             <li>
                 <div>
-                    UML与软件工程的关系是：<br/>
-                    <input type="radio">(A)UML就是软件工程<br/>
-                    <input type="radio">(B)UML参与到软件工程中软件开发过程的几个阶段<br/>
-                    <input type="radio">(C)UML与软件工程无关<br/>
-                    <input type="radio">(D)UML是软件工程的一部分<br/>
+                    <div>UML的中文全称是：</div>
+                    <div><input type="text"/></div>
                 </div>
             </li>
             <li>
                 <div>
-                    Java语言支持：<br/>
-                    <input type="radio">(A)单继承<br/>
-                    <input type="radio">(B)多继承<br/>
-                    <input type="radio">(C)单继承和多继承都支持<br/>
-                    <input type="radio">(D)单继承和多继承都不支持<br/>
+                    <div>对象最突出的特征是：</div>
+                    <div><input type="text"/><input type="text"/><input type="text"/></div>
                 </div>
             </li>
         </ol>
     </section>
     <section>
-        <header>
-            三、多项选择题（每空10分，共20分）
-        </header>
-        <p>
+        <header>二、选择题（每空10分，共20分）</header>
         <ol>
             <li>
                 <div>
-                    用例的粒度分为以下哪三种：<br/>
-                    <input type="checkbox">(A)概述级<br/>
-                    <input type="checkbox">(B)需求<br/>
-                    <input type="checkbox">(C)用户目标级<br/>
-                    <input type="checkbox">(D)子功能级<br/>
+                    <div>UML与软件工程的关系是：</div>
+                    <div><input type="radio">(A)UML就是软件工程</div>
+                    <div><input type="radio">(B)UML参与到软件工程中软件开发过程的几个阶段</div>
+                    <div><input type="radio">(C)UML与软件工程无关</div>
+                    <div><input type="radio">(D)UML是软件工程的一部分</div>
                 </div>
             </li>
             <li>
                 <div>
-                    类图由以下哪三部分组成：<br/>
-                    <input type="checkbox">(A)名称（Name）<br/>
-                    <input type="checkbox">(B)属性（Attribute）<br/>
-                    <input type="checkbox">(C)操作（Operation）<br/>
-                    <input type="checkbox">(D)方法（Function）<br/>
+                    <div>Java语言支持：</div>
+                    <div><input type="radio">(A)单继承</div>
+                    <div><input type="radio">(B)多继承</div>
+                    <div><input type="radio">(C)单继承和多继承都支持</div>
+                    <div><input type="radio">(D)单继承和多继承都不支持</div>
                 </div>
             </li>
         </ol>
     </section>
     <section>
-        <header>
-            <a>四、判断题（每空10分，共20分）</a>
-        </header>
-        <p>
+        <header>三、多项选择题（每空10分，共20分）</header>
+        <ol>
+            <li>
+                <div>
+                    <div>用例的粒度分为以下哪三种：</div>
+                    <div><input type="checkbox">(A)概述级</div>
+                    <div><input type="checkbox">(B)需求</div>
+                    <div><input type="checkbox">(C)用户目标级</div>
+                    <div><input type="checkbox">(D)子功能级</div>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <div>类图由以下哪三部分组成：</div>
+                    <div><input type="checkbox">(A)名称（Name）</div>
+                    <div><input type="checkbox">(B)属性（Attribute）</div>
+                    <div><input type="checkbox">(C)操作（Operation）</div>
+                    <div><input type="checkbox">(D)方法（Function）</div>
+                </div>
+            </li>
+        </ol>
+    </section>
+    <section>
+        <header>四、判断题（每空10分，共20分</header>
         <ol>
             <li>
                 <div>用例图只是用于和客户交流和沟通的，用于确定需求。
@@ -106,18 +96,19 @@
         </ol>
     </section>
     <section>
-        <header>
-            <a>五、简答题（每空20分，共20分）</a>
-        </header>
-        <p>
+        <header>五、简答题（每空20分，共20分）</header>
         <ol>
-            <li>简述什么是模型以及模型的表现形式？
-                <textarea rows="3" cols="20"></textarea>
+            <li>
+                <div>简述什么是模型以及模型的表现形式？
+                    <textarea rows="3" cols="20"></textarea>
+                </div>
             </li>
         </ol>
     </section>
     <section>
-        <button>计算分数</button>
+        <div>
+            <button>计算分数</button>
+        </div>
     </section>
 </article>
 </body>
